# jcconv

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py  tox.ini
jcconv/: __init__.py  jcconv.py  jcconv_test.py
tests/: __init__.py  test_jcconv.py
